# ds-lab-template

./: .pre-commit-config.yaml  Makefile  README.md  conda-lock.yml  environment.yml  pyproject.toml
.github/workflows/: python-package-conda.yml
notebooks/: Wk01_notebook.ipynb  how_to_unit_test_notebooks.ipynb
notebooks/HarvardX_PH526x/: HW1.ipynb  HW2.ipynb  HW3-1.ipynb
notebooks/nlp/: C1_W1_lecture_nb_01_preprocessing.ipynb  C1_W1_lecture_nb_02_word frequencies.ipynb  C1_W1_lecture_nb_03_logistic_regression_model.ipynb  utils.py
src/: process.py  train_model.py
