[tool.poetry]
name = "ds-lab"
version = "0.1.0"
description = ""
authors = ["Kamesh Karra"]

[tool.poetry.dependencies]
python = "^3.11"
dvc = "^3.0.0"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
urllib3 = "^1.26.16"
nltk = "^3.8.1"
matplotlib = "^3.8.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
jupyter = "^1.0.0"
poethepoet = "^0.24.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.ruff]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "Q"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.mccabe]
max-complexity = 10
